--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "myvent-server",
   "version": "1.0.0",
-  "type": "module",
-  "main": "server.mjs",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.mjs"
+    "start": "node server.js"
   },
   "dependencies": {
-    "ws": "^8.17.0",
-    "nanoid": "^5.0.7"
+    "ws": "^8.13.0"
   }
 }
